@startuml

title __OBJECT's Class Diagram__\n

  package object {
    class Ball {
        + radius : float
        + Ball()
        + draw()
    }
  }
  

  package object {
    class Pawn {
        - bodyHeight : float
        - radius : float
        + Pawn()
        + draw()
        + getCamX()
        + getCamY()
        + getCamZ()
    }
  }
  

  package object {
    class Tile {
        {static} - SHADE : float
        {static} - PADDING_SCALE : float
        - size : float
        + Tile()
        + Tile()
        + getSize()
        + draw()
        + setColor()
    }
  }
  

  package object {
    class Wall {
        {static} - SHADE : float
        {static} - PADDING_SCALE : float
        - width : float
        - height : float
        + Wall()
        + Wall()
        + getWidth()
        + getHeight()
        + setColor()
        + draw()
    }
  }
  

  Ball -up-|> PhysicalObject
  Pawn -up-|> PlayableObject
  Tile -up-|> EngineObject
  Tile o-- Polygon : main
  Tile o-- Polygon : padding
  Wall -up-|> EngineObject
  Wall o-- Polygon : main
  Wall o-- Polygon : padding1
  Wall o-- Polygon : padding2


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
